anypoint-connector-devkit/v/3.7/installing-and-testing-your-connector-in-studio.adoc
= 安装并测试您的连接器
:keywords: devkit, install, test, connector, connection strategy, connector config

使用Anypoint DevKit插件构建项目后，您可以在Anypoint Studio中安装骨架连接器，以在向其添加更多操作之前确认其基本功能。本文档介绍了在Anypoint Studio中构建，然后安装和测试连接器的步骤。

这个程序的步骤是：

. 设置必需的@Connector注释。
. 向连接器添加一个"put in barn"操作。
. 记录"put in barn"操作。
. 构建连接器项目并使用Anypoint DevKit插件进行安装。
. 测试连接器的基本功能。

== 先决条件

本文假设您有 link:/anypoint-connector-devkit/v/3.7/creating-an-anypoint-connector-project[创建一个连接器项目]。

== 设置@Connector注释参数

Maven生成的类上的`@Connector`注释具有必需的参数：`friendlyName`。 （请参阅下面的示例。）此参数为连接器定义了人类可读的名称，该名称在Studio的调色板中显示为连接器的标签。没有这个参数，连接器不会出现在Anypoint Studio的调色板中。

[source,java, linenums]
----
@Connector(name = "barn", schemaVersion = "1.0", friendlyName = "Barn")
----

== 添加一个操作

您创建的连接器项目立即准备好构建，然后在Anypoint Studio中进行安装和测试。但是，为了使测试更有趣，您可以将接收动物的连接器添加为字符串并返回相同的动物名称，然后返回"has been placed in the barn"。按照以下步骤添加此操作。

. 在Anypoint Studio中，打开主要Java文件*`src/main/java/org.mule.modules.barn/BarnConnector.java`*
. 将以下代码粘贴到连接器类中：
+
[source,java, linenums]
----
/**
 * Custom processor that places an animal in the barn.
 *
 * {@sample.xml ../../../doc/barn-connector.xml.sample barn:putInBarn}
 *
 * @param animal Name of the animal to be place in the barn
 * @return returns processed message
 */
 @Processor
 public String putInBarn(String animal) {
    return animal + " has been placed in the barn";
 }
----
+
[NOTE]
标识符`name`是保留的，不能用作参数。
. 确认完整的类显示如下：
+
[source,java, linenums]
----
/**
 * (c) 2003-2014 MuleSoft, Inc. The software in this package is published
 * under the terms of the CPAL v1.0 license, a copy of which has been
 * included with this distribution in the LICENSE.md file.
 */
package org.mule.modules.barn;
import org.mule.api.annotations.Config;
import org.mule.api.annotations.Connector;
import org.mule.api.annotations.Configurable;
import org.mule.api.annotations.Processor;
import org.mule.api.annotations.param.Default;
/**
 * Anypoint Connector
 *
 * @author MuleSoft, Inc.
 */
@Connector(name="barn", schemaVersion="1.0", friendlyName="Barn")
public class BarnConnector
{
    /**
     * Configurable
     */
    @Configurable
    @Default("value")
    private String myProperty;
    @Config
    ConnectorConfig config;

    /**
     * Custom processor
     *
     * {@sample.xml ../../../doc/barn-connector.xml.sample barn:my-processor}
     *
     * @param content Content to be processed
     * @return Some string
     */
    @Processor
    public String myProcessor(String content) {
        /*
         * MESSAGE PROCESSOR CODE GOES HERE
         */
        return content;
    }
    /**
     * Custom processor that places an animal in the barn.
     *
     * {@sample.xml ../../../doc/barn-connector.xml.sample barn:putInBarn}
     *
     * @param animal Name of the animal to be place in the barn
     * @return returns processed message
     */
     @Processor
     public String putInBarn(String animal) {
        return animal + " has been placed in the barn";
     }
    /**
     * Set property
     *
     * @param myProperty My property
     */
    public void setMyProperty(String myProperty) {
        this.myProperty = myProperty;
    }
    /**
     * Get property
     */
    public String getMyProperty() {
        return this.myProperty;
    }
    public ConnectorConfig getConnectorConfig() {
        return this.config;
    }
    public void setConnectorConfig(ConnectorConfig
      connectorConfig) {
        this.config = connectorConfig;
    }
}
----
+
. 在Anypoint Studio中，在代码中选择`ConnectorConfig`，然后在Mac上按下CMD键，或在Windows中按下Ctrl键。打开`ConnectorConfig.java`文件，您可以看到该连接器的连接管理实施。


=== 记录操作

由于DevKit强制执行所有项目的正确文档，因此您必须提供至少一个如何使用添加到连接器的每项操作的示例。

. 在您的Anypoint Studio中，打开文件`doc/barn-connector.xml.sample`，然后在末尾粘贴以下代码片段：
+
[source,xml, linenums]
----
<!-- BEGIN_INCLUDE(barn:putInBarn) -->
    <barn:put-in-barn animal="#[map-payload:animal]" />
<!-- END_INCLUDE(barn:putInBarn) -->
----
. 确认文件的完整内容显示为：
+
[source,xml, linenums]
----
<!-- BEGIN_INCLUDE(barn:myProcessor) -->
    <barn:my-processor content="#[map-payload:content]" />
<!-- END_INCLUDE(barn:myProcessor) -->

<!-- BEGIN_INCLUDE(barn:putInBarn) -->
    <barn:put-in-barn animal="#[map-payload:animal]" />
<!-- END_INCLUDE(barn:putInBarn) -->
----



== 构建和安装连接器

此时连接器已准备好第一次被构建和使用。 Anypoint Studio的DevKit插件可自动完成构建连接器，运行测试以及将其打包到Anypoint Studio中使用的过程。

要编译并安装连接器，请右键单击您的项目并选择*Anypoint Connector*> *Install or Update*。 *Install or Update*功能可以建议您在Anypoint Studio中自动更新连接器。

对于手动安装，请从连接器项目目录内的命令控制台运行以下命令：

[source,code,linenums]
----
mvn clean package
----

该命令将创建一个"update site"，您可以使用该{}来在Anypoint Studio中安装连接器。有关如何打包连接器的更多信息，请查看 link:/anypoint-connector-devkit/v/3.7/packaging-your-connector-for-release[打包发布的连接器]。

从更新站点安装=== 

[NOTE]
====
运行`mvn clean package`命令之后：

. 转到*Help*> *Install New Software* +
. 点击*Add*。找到打包连接器的`.zip`文件/压缩文件。
. 确保连接器显示在中央窗格中，并已选中。点击*Next*。
+
image:installing-and-testing-your-connector-in-studio-69499.png[]
+
. 再次确保在下一个屏幕上选择连接器。点击*Next*，接受许可，接受条款和*Finish*。

====


== 测试连接器

要查看您的新连接器功能，请创建，然后运行使用Barn连接器的Mule应用程序。您可以使用Studio Visual Editor或其XML Editor编辑器来创建应用程序。

[tabs]
------
[tab,title="Studio Visual Editor"]
....

. Create a simple flow using an *HTTP* connector and your new *Barn Connector*. Use the default values configured in the HTTP endpoint (*port*: `8081`, *host*: `localhost`).
+
image:36BarnConnector.png[36BarnConnector]
+
. Select the connector to open the properties editor. Notice the parameters Studio makes available to the end user to configure. Configure the parameters according to the table below.
+
image:config1.png[config1]
+
[%header%autowidth.spread]
|===
|Parameter |Value
|*Display Name* |`Barn`
|*Config Reference* |See next step
|*Operation* |Put In Barn
|*Animal* |`#[message.inboundProperties['animal']]` 
|===
+
. Click the plus sign next to the *Config Reference* field to create a new global element for your connector to use.
+
image:config.png[config]
+
. In the *My Property*, *Username*, and *Password* fields, enter any string as the value, then click *OK*. +
 +
image:global-elements.png[global-elements]
+
. Save, then run the project as a Mule Application (right-click project name, then select *Run As* > *Mule Application*).
. From a browser, navigate to `http://localhost:8081/?animal=Mule`
. The application returns the response in your browser (see below).
+
image:browser.png[browser]

....
[tab,title="XML"]
....

. Create a simple flow using an HTTP connector and your new `barn:config`. Configure the parameters of each element according to the code sample below.
+
[source,xml, linenums]
----
<mule xmlns:barn="http://www.mulesoft.org/schema/mule/barn"
    xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core"
    xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" 
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/barn http://www.mulesoft.org/schema/mule/barn/current/mule-barn.xsd">

    <barn:config name="Barn" username="user" password="pass"
        myProperty="whatever you want" doc:name="Barn">
        <barn:connection-pooling-profile
            initialisationPolicy="INITIALISE_ONE" exhaustedAction="WHEN_EXHAUSTED_GROW" />
    </barn:config>

    <flow name="barntestFlow1" doc:name="barntestFlow1">
        <http:inbound-endpoint exchange-pattern="request-response"
            host="localhost" port="8081" doc:name="HTTP" />

        <barn:put-in-barn config-ref="Barn"
            animal="#[message.inboundProperties['animal']]" doc:name="Barn" />

    </flow>
</mule>
----
. Save, then run the project.
. From a browser, navigate to `http://localhost:8081/?animal=Mule`
. The application returns the response in your browser (see below).
+
image:browser.png[browser]

....
------

== 另请参阅

*  *NEXT STEP:*在您的连接器上实现 link:/anypoint-connector-devkit/v/3.7/authentication[认证]。
